# llm-performance-viz

./: .gitignore  README.md  README_CN.md  README_new.md  instance_prices.json  pyproject.toml  run_auto_test.py  run_batch_tests.sh  run_model_tests.sh  start_viz_server.py  test.sh
model_configs/sglang-v0.4.9.post4-cu126/g6e.4xlarge/: Qwen3-30B-A3B-FP8.yaml
model_configs/sglang-v0.4.9.post4-cu126/p5en.48xlarge/: DeepSeek-R1-0528-mtp-compile.yaml  DeepSeek-R1-0528-mtp.yaml  DeepSeek-R1-0528.yaml
model_configs/sglang-v0.4.9.post4/g6e.4xlarge/: Qwen3-14B-FP8.yaml  Qwen3-32B-FP8.yaml  Qwen3-8B-FP8.yaml
model_configs/sglang-v0.4.9.post4/p5.48xlarge/: Qwen3-235B-A22B.yaml  Qwen3-30B-A3B-FP8-tp1dp1.yaml  Qwen3-30B-A3B-FP8-tp1dp8.yaml
model_configs/sglang-v0.4.9.post4/p5en.48xlarge/: DeepSeek-R1-0528-mtp-compile.yaml  DeepSeek-R1-0528-mtp.yaml  DeepSeek-R1-0528.yaml  Qwen3-235B-A22B-FP8-tp4dp2.yaml  Qwen3-235B-A22B.yaml
model_configs/sglang-v0.4.9.post6/p5.48xlarge/: GLM-4.5-Air-FP8-tp4dp2-mtp.yaml  GLM-4.5-FP8-tp8-mtp.yaml
model_configs/sglang-v0.4.9.post6/p5en.48xlarge/: GLM-4.5-Air-FP8-dp8-mtp.yaml  GLM-4.5-Air-FP8-tp2dp4-mtp.yaml
model_configs/vllm-0.10.1+gptoss/p5.48xlarge/: gpt-oss-120b-tp1.yaml  gpt-oss-120b-tp8.yaml  gpt-oss-20b-tp8.yaml
model_configs/vllm-0.10.1+gptoss/p5en.48xlarge/: gpt-oss-120b-tp8.yaml
model_configs/vllm-v0.9.2/g6e.4xlarge/: Qwen3-30B-A3B-FP8.yaml
src/llm_test_tool/: __main__.py  auto_test.py  client.py  config.py  deployment.py  prompt.py  viz_client.html  viz_server.py
src/llm_test_tool/static/js/: config.js  main.js
(+1 files in other folders)
